--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -9,7 +9,9 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
 
-        <SearchableComboBox:SearchableComboBox HorizontalAlignment="Center" VerticalAlignment="Center" Width="120"/>
+        <SearchableComboBox:SearchableComboBox HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="73"
+                                  ItemsSource="{Binding Items}"
+                                  DisplayMemberPath="Name"/>
 
     </Grid>
 </Window>
