--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -1,17 +1,25 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TestApp"
-        xmlns:SearchableComboBox="clr-namespace:SearchableComboBox;assembly=SearchableComboBox" x:Class="TestApp.MainWindow"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+    x:Class="TestApp.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:SearchableComboBox="clr-namespace:SearchableComboBox;assembly=SearchableComboBox"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TestApp"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
 
-        <SearchableComboBox:SearchableComboBox HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="73"
-                                  ItemsSource="{Binding Items}"
-                                  DisplayMemberPath="Name"/>
+        <SearchableComboBox:SearchableComboBox
+            Width="400"
+            Height="73"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            SearchableComboBox:SearchableComboBox.IsSearchEnabled="False"
+            DisplayMemberPath="Name"
+            ItemsSource="{Binding Items}" />
 
     </Grid>
 </Window>
