--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -17,8 +17,8 @@
             Height="73"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
-            SearchableComboBox:SearchableComboBox.IsSearchEnabled="True"
             DisplayMemberPath="Name"
+            IsSearchEnabled="True"
             IsSynchronizedWithCurrentItem="True"
             ItemsSource="{Binding Items}"
             Placeholder="Select an item..."
