Fix to nuget package

--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -21,7 +21,7 @@
             IsSearchEnabled="True"
             IsSynchronizedWithCurrentItem="True"
             ItemsSource="{Binding Items}"
-            Placeholder="Select an item..."
+            Placeholder="Select item..."
             SelectedItem="{Binding SelectedItem, Mode=TwoWay}" />
 
         <ComboBox
